container and wrapper alignment fixed

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -35,7 +35,7 @@ textarea {
 }
 
 .container {
-  max-width: 1470px;
+  max-width: 1270px;
   margin: auto;
   @media screen and (max-width: 992px) {
     padding-right: 24px;
@@ -278,7 +278,7 @@ select {
 
 .footer {
   flex-shrink: 0 !important;
-  margin-top: 20px;
+  margin: 38px 0px;
 }
 
 .box-shadow-low {
